[gd_scene load_steps=2 format=1]

[ext_resource path="res://Einstellungen/DachdimensionInput.gd" type="Script" id=1]

[node name="DachdimensionInput" type="Button"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 371.0
margin/bottom = 311.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "?"
flat = false
script/script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 118.0
popup/exclusive = false

[node name="Container" type="VBoxContainer" parent="PopupPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 14.0
margin/right = 295.0
margin/bottom = 105.0
alignment = 0

[node name="UeberschriftContainer" type="HBoxContainer" parent="PopupPanel/Container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 295.0
margin/bottom = 14.0
alignment = 0

[node name="Label" type="Label" parent="PopupPanel/Container/UeberschriftContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 90.0
margin/bottom = 14.0
text = "Abstand (mm)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="PopupPanel/Container/UeberschriftContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 94.0
margin/top = 0.0
margin/right = 137.0
margin/bottom = 14.0
text = "Anzahl"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AbstandInputContainer" type="VBoxContainer" parent="PopupPanel/Container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 295.0
margin/bottom = 18.0
alignment = 0

[node name="AddRemoveContainer" type="HBoxContainer" parent="PopupPanel/Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 22.0
margin/right = 295.0
margin/bottom = 42.0
alignment = 0

[node name="AddButton" type="Button" parent="PopupPanel/Container/AddRemoveContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false
align = 0

[node name="RemoveButton" type="Button" parent="PopupPanel/Container/AddRemoveContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 0.0
margin/right = 49.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = " - "
flat = false
align = 2

[connection signal="pressed" from="." to="." method="_on_DachdimensionInput_pressed"]

[connection signal="pressed" from="PopupPanel/Container/AddRemoveContainer/AddButton" to="." method="_on_AddButton_pressed"]

[connection signal="pressed" from="PopupPanel/Container/AddRemoveContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]


